# aquarium-pufferfish

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  memcheck.yml
cmake/: FetchAquariumSeahorse.cmake
doc/: Conventions.md
include/: pufferfish.h
include/pufferfish/: error.h  string_pool.h
src/: error.c  string_pool.c
src/test/: cmocka.h
test/: test_pufferfish.c  test_string_pool.c
